Services/StoreService/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service-deployment
spec:
  selector:
    matchLabels:
      app: store-service
  replicas: 2
  template:
    metadata:
      labels:
        app: store-service
    spec:
      containers:
        - name: store-service
          image: franticmax/food-delivery-store-service:latest
          ports:
            - containerPort: 8080
