Services/StoreService/deploy/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service-psql-deployment
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: store-service-psql-pv
          persistentVolumeClaim:
            claimName: store-service-psql-pvc
      containers:
        - name: postgres
          image: postgres:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: store-service-psql-pv
