Services/StoreService/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
spec:
  selector:
    app: store-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type:
    ClusterIP
